# jrun

./: .gitignore  CLAUDE.md  Cargo.toml  ErrorTest.java  README.md  dist-workspace.toml  main.java  rustfmt.toml
src/: color.rs  config.rs  diagnostics.rs  file.rs  java.rs  main.rs  pretty.rs  versions.rs
src/.ipynb_checkpoints/: file-checkpoint.rs
test/: StackTraceTest.java  main.java
wix/: main.wxs
