[package]
name = "jrun2"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused = "allow"

[dependencies]
owo-colors = "4.2.3"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
duct = "1.1.0"
log = "0.4.28"
env_logger = "0.11"
dirs = "6.0.0"
which = "8.0.2"
dotenvy = "0.15.7"
